# poster-analyzer-and-picker

./: .gitignore  LICENSE  README.md  poster_analyzer.py  pyproject.toml  requirements.txt
poster_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  features.py  io_utils.py  scoring.py
tests/: test_poster_analyzer.py
