[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poster-analyzer-and-picker"
version = "1.0.0"
description = "Analyze and rank poster images by color, texture, and composition features."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Tatiana the Visionary" }]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.3",
    "scikit-image>=0.18.3",
    "matplotlib>=3.4.3",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "Pillow>=9.0"]

[project.scripts]
poster-analyzer = "poster_analyzer.cli:main"

[tool.setuptools]
packages = ["poster_analyzer"]
